# pcf8563-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/: stm32.rs
examples/esp32c3/: Cargo.toml
examples/esp32c3/.cargo/: config.toml
examples/raspi/: Cargo.toml
examples/raspi/src/: main.rs
examples/stm32/: Cargo.toml  memory.x  readme.md
examples/stm32/.cargo/: config
examples/stm32/src/: main.rs
src/: _lib.rs  alarm.rs  clkout.rs  control.rs  datetime.rs  lib.rs  timer.rs
