[package]
name = "pcf8563"
version = "0.2.0"
authors = ["Michal Lasak <nebelgrau77@gmail.com>"]
edition = "2021"
description = "Platform-agnostic Rust driver for the NXP PCF8563 real-time clock."
documentation = "https://docs.rs/pcf8563"
readme = "README.md"
homepage = "https://github.com/nebelgrau77/pcf8563-rs"
repository = "https://github.com/nebelgrau77/pcf8563-rs"
license = "MIT OR Apache-2.0"
keywords = ["pcf8563", "rtc", "clock", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

include = [
    "**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.2"

[profile.release]
lto = true
